--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,13 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
+    "mongoose": "^8.1.3",
     "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.3"
   }
 }
